--- a/BlazorDoom.csproj
+++ b/BlazorDoom.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
+        <ExcludeFoldersFromDeployment>docs</ExcludeFoldersFromDeployment>
     </PropertyGroup>
 
     <ItemGroup>
@@ -12,7 +13,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Content Remove="docs" />
+        <Content Remove="docs\**" CopyToPublishDirectory="Never" />
     </ItemGroup>
+
 
 </Project>
