--- a/BlazorDoom.csproj
+++ b/BlazorDoom.csproj
@@ -1,20 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
-
+<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly" ToolsVersion="Current">
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <ExcludeFoldersFromDeployment>docs</ExcludeFoldersFromDeployment>
+        <FileUpgradeFlags>40</FileUpgradeFlags>
+        <UpgradeBackupLocation>D:\dev\dotnet\Doom-Blazor\Backup\</UpgradeBackupLocation>
+        <OldToolsVersion>2.0</OldToolsVersion>
     </PropertyGroup>
-
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.3" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.3" PrivateAssets="all" />
-        <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
-
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0-preview.1.21103.6" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0-preview.1.21103.6" PrivateAssets="all" />
+        <PackageReference Include="System.Net.Http.Json" Version="6.0.0-preview.1.21102.12" />
     </ItemGroup>
-
     <ItemGroup>
         <Content Remove="docs\**" CopyToPublishDirectory="Never" />
     </ItemGroup>
-
-
 </Project>
