--- a/BlazorDoom.csproj
+++ b/BlazorDoom.csproj
@@ -7,9 +7,9 @@
         <OldToolsVersion>2.0</OldToolsVersion>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0-preview.1.21103.6" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0-preview.1.21103.6" PrivateAssets="all" />
-        <PackageReference Include="System.Net.Http.Json" Version="6.0.0-preview.1.21102.12" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.*-*" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.*-*" PrivateAssets="all" />
+        <PackageReference Include="System.Net.Http.Json" Version="6.*-*" />
     </ItemGroup>
     <ItemGroup>
         <Content Remove="docs\**" CopyToPublishDirectory="Never" />
