--- a/BlazorDoom.csproj
+++ b/BlazorDoom.csproj
@@ -2,9 +2,7 @@
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
         <ExcludeFoldersFromDeployment>docs</ExcludeFoldersFromDeployment>
-        <FileUpgradeFlags>40</FileUpgradeFlags>
-        <UpgradeBackupLocation>D:\dev\dotnet\Doom-Blazor\Backup\</UpgradeBackupLocation>
-        <OldToolsVersion>2.0</OldToolsVersion>
+        <RunAOTCompilation>true</RunAOTCompilation>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.*-*" />
