--- a/BlazorDoom.csproj
+++ b/BlazorDoom.csproj
@@ -3,6 +3,10 @@
         <TargetFramework>net7.0</TargetFramework>
         <ExcludeFoldersFromDeployment>docs</ExcludeFoldersFromDeployment>
         <RunAOTCompilation>true</RunAOTCompilation>
+        <!-- https://learn.microsoft.com/en-us/aspnet/core/blazor/tooling?view=aspnetcore-7.0&pivots=windows#net-webassembly-build-tools-1 -->
+        <WasmEnableSIMD>true</WasmEnableSIMD>
+        <WasmEnableExceptionHandling>true</WasmEnableExceptionHandling>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.*-*" />
