play music attempt

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+.vscode/
 # Created by https://www.toptal.com/developers/gitignore/api/dotnetcore
 # Edit at https://www.toptal.com/developers/gitignore?templates=dotnetcore
 
