--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
     "profiles": {
-        "MangedDoom-Blazor": {
+        "BlazorDoom": {
             "commandName": "Project",
             "launchBrowser": true,
             "environmentVariables": {
