--- a/BlazorDoom.csproj
+++ b/BlazorDoom.csproj
@@ -1,8 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.WebAssembly">
-    <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
-        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <Nullable>enable</Nullable>
-        <WarningLevel>0</WarningLevel>
-    </PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>net9.0</TargetFramework>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Nullable>enable</Nullable>
+    <WarningLevel>0</WarningLevel>
+    <DefaultItemExcludes>$(DefaultItemExcludes);docs\**\*;media;slides-src\**\*</DefaultItemExcludes>
+  </PropertyGroup>
 </Project>
